project links not showing up on the live url so fixing that

--- a/Asset/style.css
+++ b/Asset/style.css
@@ -290,17 +290,17 @@ header .navbar ul li a:hover{
 }
 
 
-.portfolio .card .h3 {
+.projects .card .h3 {
     font-size: 1.25em;
     text-align: center;
     margin-bottom: 15px;
 }
-.portfolio .card .img .img{
+.projects .card .img .img{
     border: 4px solid #364958;
     width: 100%;
     border-radius: 0;
 }
-.portfolio .card .img .proj-links a{
+.projects .card .img .proj-links a{
     display: block;
     padding: 1rem;
     margin: 1.5rem 0;
